tester/src/test/aya/failure/patterns/issue366.aya.txt
In file $FILE:3:4 ->

  1 | open data Nat : Set 0 | zero | suc Nat
  2 | open data Ray (a : Nat) : Set | zero => eldath
  3 | def ray-eldath (a : Nat) (ed40 : Ray a) : Nat
          ^--------^
  
Error: The 1st and the 3rd clauses are not confluent because we failed to unify `suc zero` and `zero`
Tycking interrupted due to error(s).
What are you doing?
